syntax = "proto3";

package payment;

service PaymentService {
  rpc MakePayment (PaymentRequest) returns (PaymentResponse);
  rpc TestMicroservice (Empty) returns (PaymentResponse);
}

message Empty {}

message PaymentRequest {
  string userId = 1;
  float amount = 2;
}

message PaymentResponse {
  bool success = 1;
  string message = 2;
}
